Migrated to oracle.
*Fixed cast problems with BigDecimal and Integer
*Datasource changed